courses/430_programming-languages/assignment-6/tests/error/hw5_eval40.nex
print (anon () : (int -> int) {
   var f : (int -> int);
   f = anon (x : int) : int {
      if (x <= 1) {
         return 1;
      }
      else {
         return x * f(x - 1);
      }
   };
   return f;
})()(5);
print ":n";
